--- a/src/static/css/app.scss
+++ b/src/static/css/app.scss
@@ -36,13 +36,6 @@ figure {
   padding: 0;
 }
 
-header {
-  min-height: 100%;
-  width: 100%;
-  background: #000 url('https://www.fabiobier.com/static/img/poster.jpg') 0 0 no-repeat;
-  box-shadow: 0 95px 100px 55px #050010;
-}
-
 .main {
   max-width: 68em;
   margin: $gutter auto;
